@@ -1,3 +1,8 @@
+2011-05-12  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* src/ac.c (verify_admin_0): Use PW_ERR_PW1 counter when
+	authenticated by PW1.
+
 2011-05-11  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* src/ac.c (verify_pso_cds, verify_other): Fail (with no counter
